==> houkhouk/luos_engine/network/robus_network/HAL/STM32G4/robus_hal.c <==
#include "robus_hal.h"
#include "luos_hal.h"
#include <stdbool.h>
#include <string.h>
#include "reception.h"
#include "context.h"
#include "stm32g4xx_ll_usart.h"
#include "stm32g4xx_ll_gpio.h"
#include "stm32g4xx_ll_tim.h"
#include "stm32g4xx_ll_exti.h"
#include "stm32g4xx_ll_dma.h"
#include "stm32g4xx_ll_system.h"
#define DEFAULT_TIMEOUT 30
#define TIMEOUT_ACK     DEFAULT_TIMEOUT / 4

void RobusHAL_ComInit(uint32_t Baudrate)
{
    HAL_NVIC_DisableIRQ(ROBUS_COM_IRQ);
    HAL_NVIC_ClearPendingIRQ(ROBUS_COM_IRQ);
    ROBUS_COM_CLOCK_ENABLE();

    LL_USART_InitTypeDef USART_InitStruct;

    // Initialise USART1
    LL_USART_Disable(ROBUS_COM);
    USART_InitStruct.BaudRate            = Baudrate;
    USART_InitStruct.DataWidth           = LL_USART_DATAWIDTH_8B;
    USART_InitStruct.StopBits            = LL_USART_STOPBITS_1;
    USART_InitStruct.Parity              = LL_USART_PARITY_NONE;
    USART_InitStruct.TransferDirection   = LL_USART_DIRECTION_TX_RX;
    USART_InitStruct.HardwareFlowControl = LL_USART_HWCONTROL_NONE;
    USART_InitStruct.OverSampling        = LL_USART_OVERSAMPLING_16;
    while (LL_USART_Init(ROBUS_COM, &USART_InitStruct) != SUCCESS)
        ;
    LL_USART_Enable(ROBUS_COM);

    // Enable Reception interrupt
    LL_USART_EnableIT_RXNE(ROBUS_COM);

    HAL_NVIC_EnableIRQ(ROBUS_COM_IRQ);
    HAL_NVIC_SetPriority(ROBUS_COM_IRQ, 0, 1);

    // Timeout Initialization
    Timer_Prescaler = (MCUFREQ / Baudrate) / TIMERDIV;
    RobusHAL_TimeoutInit();

#ifndef USE_TX_IT
    ROBUS_DMA_CLOCK_ENABLE();

    LL_DMA_SetPeriphRequest(ROBUS_DMA, ROBUS_DMA_CHANNEL, ROBUS_DMA_REQUEST);
    LL_DMA_SetDataTransferDirection(ROBUS_DMA, ROBUS_DMA_CHANNEL, LL_DMA_DIRECTION_MEMORY_TO_PERIPH);
    LL_DMA_SetChannelPriorityLevel(ROBUS_DMA, ROBUS_DMA_CHANNEL, LL_DMA_PRIORITY_LOW);
    LL_DMA_SetMode(ROBUS_DMA, ROBUS_DMA_CHANNEL, LL_DMA_MODE_NORMAL);
    LL_DMA_SetPeriphIncMode(ROBUS_DMA, ROBUS_DMA_CHANNEL, LL_DMA_PERIPH_NOINCREMENT);
    LL_DMA_SetMemoryIncMode(ROBUS_DMA, ROBUS_DMA_CHANNEL, LL_DMA_MEMORY_INCREMENT);
    LL_DMA_SetPeriphSize(ROBUS_DMA, ROBUS_DMA_CHANNEL, LL_DMA_PDATAALIGN_BYTE);
    LL_DMA_SetMemorySize(ROBUS_DMA, ROBUS_DMA_CHANNEL, LL_DMA_MDATAALIGN_BYTE);
    LL_DMA_SetPeriphAddress(ROBUS_DMA, ROBUS_DMA_CHANNEL, (uint32_t)&ROBUS_COM->TDR);
#endif
}

_CRITICAL void RobusHAL_SetTxState(uint8_t Enable)
{
    if (Enable == true)
    {
        // Put Tx in push pull
        LL_GPIO_SetPinOutputType(COM_TX_PORT, COM_TX_PIN, LL_GPIO_OUTPUT_PUSHPULL);
        if ((TX_EN_PIN != DISABLE) || (TX_EN_PORT != DISABLE))
        {
            LL_GPIO_SetOutputPin(TX_EN_PORT, TX_EN_PIN);
        }
    }
    else
    {
        // Put Tx in open drain
        LL_GPIO_SetPinOutputType(COM_TX_PORT, COM_TX_PIN, LL_GPIO_OUTPUT_OPENDRAIN);
        if ((TX_EN_PIN != DISABLE) || (TX_EN_PORT != DISABLE))
        {
            LL_GPIO_ResetOutputPin(TX_EN_PORT, TX_EN_PIN);
        }
#ifdef USE_TX_IT
        // Stop current transmit operation
        data_size_to_transmit = 0;
        // Disable Transmission empty buffer interrupt
        LL_USART_DisableIT_TXE(ROBUS_COM);
#else
        LL_USART_DisableDMAReq_TX(ROBUS_COM);
        LL_DMA_DisableChannel(ROBUS_DMA, ROBUS_DMA_CHANNEL);
#endif
        // Disable Transmission complete interrupt
        LL_USART_DisableIT_TC(ROBUS_COM);
    }
}

_CRITICAL void RobusHAL_SetRxState(uint8_t Enable)
{
    if (Enable == true)
    {
        LL_USART_RequestRxDataFlush(ROBUS_COM); // Clear data register
        LL_USART_EnableDirectionRx(ROBUS_COM);
        LL_USART_EnableIT_RXNE(ROBUS_COM); // Enable Rx IT
    }
    else
    {
        LL_USART_DisableDirectionRx(ROBUS_COM);
        LL_USART_DisableIT_RXNE(ROBUS_COM); // Disable Rx IT
    }
}

_CRITICAL void RobusHAL_ComTransmit(uint8_t *data, uint16_t size)
{
    while (LL_USART_IsActiveFlag_TXE(ROBUS_COM) == RESET)
        ;
    // Disable RX detec pin if needed

    // Reduce size by one because we send one directly
    data_size_to_transmit = size - 1;
    if (size > 1)
    {
        // Start the data buffer transmission
        // **** NO DMA
        // Copy the data pointer globally alowing to keep it and run the transmission.
        tx_data = data;
#ifdef USE_TX_IT
        // Send the first byte
        LL_USART_TransmitData8(ROBUS_COM, *(tx_data++));
        // Enable Transmission empty buffer interrupt to transmit next datas
        LL_USART_EnableIT_TXE(ROBUS_COM);
        // Disable Transmission complete interrupt
        LL_USART_DisableIT_TC(ROBUS_COM);
#else
        data_size_to_transmit = 0; // to not check IT TC during collision
        // Disable DMA to load new length to be tranmitted
        LL_DMA_DisableChannel(ROBUS_DMA, ROBUS_DMA_CHANNEL);
        // configure address to be transmitted by DMA
        LL_DMA_SetMemoryAddress(ROBUS_DMA, ROBUS_DMA_CHANNEL, (uint32_t)data);
        // set length to be tranmitted
        LL_DMA_SetDataLength(ROBUS_DMA, ROBUS_DMA_CHANNEL, size);
        // set request DMA
        LL_USART_EnableDMAReq_TX(ROBUS_COM);
        // Enable TX
        RobusHAL_SetTxState(true);
        // Enable DMA again
        LL_DMA_EnableChannel(ROBUS_DMA, ROBUS_DMA_CHANNEL);
        // enable transmit complete
        LL_USART_EnableIT_TC(ROBUS_COM);
#endif
    }
    else
    {
        // Wait before send ack
        data_size_to_transmit = 1;
        // This is a patch du to difference MCU frequency
        while (LL_TIM_GetCounter(ROBUS_TIMER) < TIMEOUT_ACK)
            ;
        // Enable TX
        RobusHAL_SetTxState(true);
        // Transmit the only byte we have
        LL_USART_TransmitData8(ROBUS_COM, *data);
        // Enable Transmission complete interrupt because we only have one.
        LL_USART_EnableIT_TC(ROBUS_COM);
    }
    RobusHAL_ResetTimeout(true, 0);
}

static void RobusHAL_TimeoutInit(void)
{
    LL_TIM_InitTypeDef TimerInit = {0};

    // initialize clock
    ROBUS_TIMER_CLOCK_ENABLE();

    TimerInit.Autoreload        = DEFAULT_TIMEOUT;
    TimerInit.ClockDivision     = LL_TIM_CLOCKDIVISION_DIV1;
    TimerInit.CounterMode       = LL_TIM_COUNTERMODE_UP;
    TimerInit.Prescaler         = Timer_Prescaler - 1;
    TimerInit.RepetitionCounter = 0;
    while (LL_TIM_Init(ROBUS_TIMER, &TimerInit) != SUCCESS)
        ;
    LL_TIM_EnableIT_UPDATE(ROBUS_TIMER);
    HAL_NVIC_SetPriority(ROBUS_TIMER_IRQ, 0, 2);
    HAL_NVIC_EnableIRQ(ROBUS_TIMER_IRQ);
}

_CRITICAL void RobusHAL_ResetTimeout(uint16_t enable, uint16_t nbrbit)
{
    uint32_t arr_val, diff;
    arr_val = LL_TIM_ReadReg(ROBUS_TIMER, ARR);  // Get actual timeout value
    diff = arr_val-LL_TIM_ReadReg(ROBUS_TIMER, CNT);  // Compute remaining time before timeout 

    if( diff < DEFAULT_TIMEOUT ){
        // HAL_GPIO_WritePin(GPIOA, GPIO_PIN_4, SET);
        LL_TIM_DisableCounter(ROBUS_TIMER);
        NVIC_ClearPendingIRQ(ROBUS_TIMER_IRQ); // Clear IT pending NVIC
        LL_TIM_ClearFlag_UPDATE(ROBUS_TIMER);

        LL_TIM_SetAutoReload(ROBUS_TIMER, DEFAULT_TIMEOUT);
        LL_TIM_SetCounter(ROBUS_TIMER, 0);
        // HAL_GPIO_WritePin(GPIOA, GPIO_PIN_4, RESET);
    }
    if(nbrbit != 0){
        LL_TIM_SetAutoReload(ROBUS_TIMER, nbrbit); // reload value
        LL_TIM_SetCounter(ROBUS_TIMER, 0); // Reset counter
    }

    if(enable){
        LL_TIM_EnableCounter(ROBUS_TIMER);
    }
}

static void RobusHAL_GPIOInit(void)
{
    // Activate Clock for PIN choosen in RobusHAL
    PORT_CLOCK_ENABLE();

    if ((RX_EN_PIN != DISABLE) || (RX_EN_PORT != DISABLE))
    {
        /*Configure GPIO pins : RxEN_Pin */
        GPIO_InitStruct.Pin   = RX_EN_PIN;
        GPIO_InitStruct.Mode  = GPIO_MODE_OUTPUT_PP;
        GPIO_InitStruct.Pull  = GPIO_NOPULL;
        GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_HIGH;
        HAL_GPIO_Init(RX_EN_PORT, &GPIO_InitStruct);
    }

    if ((TX_EN_PIN != DISABLE) || (TX_EN_PORT != DISABLE))
    {
        /*Configure GPIO pins : TxEN_Pin */
        GPIO_InitStruct.Pin   = TX_EN_PIN;
        GPIO_InitStruct.Mode  = GPIO_MODE_OUTPUT_PP;
        GPIO_InitStruct.Pull  = GPIO_NOPULL;
        GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_HIGH;
        HAL_GPIO_Init(TX_EN_PORT, &GPIO_InitStruct);
    }

    /*Configure GPIO pin : TxPin */
    GPIO_InitStruct.Pin       = COM_TX_PIN;
    GPIO_InitStruct.Mode      = GPIO_MODE_AF_OD;
    GPIO_InitStruct.Pull      = GPIO_PULLUP;
    GPIO_InitStruct.Speed     = GPIO_SPEED_FREQ_HIGH;
    GPIO_InitStruct.Alternate = COM_TX_AF;
    HAL_GPIO_Init(COM_TX_PORT, &GPIO_InitStruct);

    /*Configure GPIO pin : RxPin */
    GPIO_InitStruct.Pin       = COM_RX_PIN;
    GPIO_InitStruct.Mode      = GPIO_MODE_AF_OD;
    GPIO_InitStruct.Pull      = GPIO_PULLUP;
    GPIO_InitStruct.Speed     = GPIO_SPEED_FREQ_HIGH;
    GPIO_InitStruct.Alternate = COM_RX_AF;
    HAL_GPIO_Init(COM_RX_PORT, &GPIO_InitStruct);

    // configure PTP
    RobusHAL_RegisterPTP();
    for (uint8_t i = 0; i < NBR_PORT; i++) /*Configure GPIO pins : PTP_Pin */
    {
        // Disable IT for PTP
        HAL_NVIC_DisableIRQ(PTP[i].IRQ);
        HAL_NVIC_ClearPendingIRQ(PTP[i].IRQ);
        GPIO_InitStruct.Pin   = PTP[i].Pin;
        GPIO_InitStruct.Mode  = GPIO_MODE_IT_FALLING;
        GPIO_InitStruct.Pull  = GPIO_PULLDOWN;
        GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_LOW;
        HAL_GPIO_Init(PTP[i].Port, &GPIO_InitStruct);
        // Setup PTP lines
        RobusHAL_SetPTPDefaultState(i);
        // activate IT for PTP
        HAL_NVIC_SetPriority(PTP[i].IRQ, 1, 0);
        HAL_NVIC_EnableIRQ(PTP[i].IRQ);
    }

    if ((TX_LOCK_DETECT_PIN != DISABLE) || (TX_LOCK_DETECT_PORT != DISABLE))
    {
        /*Configure GPIO pins : TX_LOCK_DETECT_Pin */
        GPIO_InitStruct.Pin   = TX_LOCK_DETECT_PIN;
        GPIO_InitStruct.Pull  = GPIO_PULLUP;
        GPIO_InitStruct.Mode  = GPIO_MODE_INPUT;
        GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_HIGH;
        if (TX_LOCK_DETECT_IRQ != DISABLE)
        {
            GPIO_InitStruct.Mode = GPIO_MODE_IT_FALLING;
            HAL_NVIC_SetPriority(TX_LOCK_DETECT_IRQ, 1, 0);
            HAL_NVIC_EnableIRQ(TX_LOCK_DETECT_IRQ);
        }
        HAL_GPIO_Init(TX_LOCK_DETECT_PORT, &GPIO_InitStruct);
    }
}

_CRITICAL void RobusHAL_SetPTPDefaultState(uint8_t PTPNbr)
{
    __HAL_GPIO_EXTI_CLEAR_IT(PTP[PTPNbr].Pin);
    // Pull Down / IT mode / Rising Edge
    GPIO_InitStruct.Mode = GPIO_MODE_IT_RISING;
    GPIO_InitStruct.Pull = GPIO_PULLDOWN;
    GPIO_InitStruct.Pin  = PTP[PTPNbr].Pin;
    HAL_GPIO_Init(PTP[PTPNbr].Port, &GPIO_InitStruct);
}

_CRITICAL void RobusHAL_SetPTPReverseState(uint8_t PTPNbr)
{
    __HAL_GPIO_EXTI_CLEAR_IT(PTP[PTPNbr].Pin);
    // Pull Down / IT mode / Falling Edge
    GPIO_InitStruct.Mode = GPIO_MODE_IT_FALLING; // reverse the detection edge
    GPIO_InitStruct.Pull = GPIO_PULLDOWN;
    GPIO_InitStruct.Pin  = PTP[PTPNbr].Pin;
    HAL_GPIO_Init(PTP[PTPNbr].Port, &GPIO_InitStruct);
}

void RobusHAL_PushPTP(uint8_t PTPNbr)
{
    // Pull Down / Output mode
    GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP; // Clean edge/state detection and set the PTP pin as output
    GPIO_InitStruct.Pull = GPIO_PULLDOWN;
    GPIO_InitStruct.Pin  = PTP[PTPNbr].Pin;
    HAL_GPIO_Init(PTP[PTPNbr].Port, &GPIO_InitStruct);
    HAL_GPIO_WritePin(PTP[PTPNbr].Port, PTP[PTPNbr].Pin, GPIO_PIN_SET);
}

uint8_t RobusHAL_GetPTPState(uint8_t PTPNbr)
{
    // Pull Down / Input mode
    return (HAL_GPIO_ReadPin(PTP[PTPNbr].Port, PTP[PTPNbr].Pin));
}
